--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ repository = "https://github.com/CircleOnCircles/autoname"
 python = "^3.6"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.4"
+coverage = "^5.5"
 
 [build-system]
 requires = ["poetry>=0.12"]
