--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,20 @@ readme = "README.md"
 repository = "https://github.com/CircleOnCircles/autoname"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
 coverage = "^5.5"
 
+[tool.poetry.group.dev.dependencies]
+mypy = "^1.2.0"
+ruff = "^0.0.261"
+black = "^23.3.0"
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.ruff]
+line-length = 88
