--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["Nutchanon Ninyawee <me@nutchanon.org>"]
 license = "ISC"
 readme = "README.md"
 repository = "https://github.com/CircleOnCircles/autoname"
+packages = [{ include = "autoname" }, { include = "autoname/py.typed" }]
+
 
 [tool.poetry.dependencies]
 python = "^3.7"
