--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "an enum `AutoName` from python docs with multiple stringcase opti
 authors = ["Nutchanon Ninyawee <me@nutchanon.org>"]
 license = "ISC"
 readme = "README.md"
-repository = "https://github.com/CircleOnCircles/autoname"
+repository = "https://github.com/wasdee/autoname"
 packages = [{ include = "autoname" }, { include = "autoname/py.typed" }]
 
 
@@ -20,6 +20,7 @@ coverage = "^5.5"
 mypy = "^1.2.0"
 ruff = "^0.0.261"
 black = "^23.3.0"
+pytest-cov = "^4.0.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
