--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,11 +16,10 @@ jobs:
     #----------------------------------------------
     #          install and run linters
     #----------------------------------------------
-    - run: python -m pip install ruff black mypy
+    - run: python -m pip install ruff black
     - run: |
         ruff check . 
         black . --check
-        mypy .
 
   test:
     needs: linting
@@ -64,5 +63,6 @@ jobs:
     - name: Run tests
       run: |
         source .venv/bin/activate
+        mypy ./
         pytest tests/ 
         coverage report
