--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,15 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-python@v4
       with:
-        cache: 'pip'
+        python-version: '3.11'
+    #----------------------------------------------
+    #        load pip cache if cache exists
+    #----------------------------------------------
+    - uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip
+        restore-keys: ${{ runner.os }}-pip
     #----------------------------------------------
     #          install and run linters
     #----------------------------------------------
@@ -63,6 +71,5 @@ jobs:
     - name: Run tests
       run: |
         source .venv/bin/activate
-        mypy ./
         pytest tests/ 
         coverage report
